--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <form id="submit-form">
         <!-- Customer Profile -->
         <div class="form-group">
-          <label class="form-label" data-ui-key="Required">
+          <label class="form-label" data-ui-key="Describe who would use your product">
             <span data-ui-key="Ideal Customer Profile">Ideal Customer Profile</span> <span class="required">*</span>
           </label>
           <div class="input-with-icon" data-tooltip-key="ideal_customer_profile">
@@ -86,7 +86,7 @@
 
         <!-- Product Idea -->
         <div class="form-group">
-          <label class="form-label" data-ui-key="Required">
+          <label class="form-label" data-ui-key="Explain your product idea">
             <span data-ui-key="Product Idea">Product Idea</span> <span class="required">*</span>
           </label>
           <div class="input-with-icon" data-tooltip-key="product_idea">
@@ -105,7 +105,7 @@
 
         <!-- Pain Points -->
         <div class="form-group">
-          <label class="form-label" data-ui-key="Required">
+          <label class="form-label" data-ui-key="What problems does this solve?">
             <span data-ui-key="Pain Points">Pain Points</span> <span class="required">*</span>
           </label>
           <div class="input-with-icon" data-tooltip-key="pain_points">
@@ -124,7 +124,7 @@
 
         <!-- Alternatives -->
         <div class="form-group">
-          <label class="form-label" data-ui-key="Required">
+          <label class="form-label" data-ui-key="What similar solutions exist?">
             <span data-ui-key="Alternatives">Alternatives</span> <span class="required">*</span>
           </label>
           <div class="input-with-icon" data-tooltip-key="alternatives">
