--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                      class="form-textarea" required
                      data-ui-key="Describe who would use your product..."
                      placeholder="Tell us about your ideal user - who are they, what do they do, what frustrates them?"></textarea>
-            <span class="tooltip-icon">💡
+            <span class="tooltip-icon">👁️
               <span class="tooltip-text">
                 Paint us a picture of your perfect user! Think about their age, job, daily challenges, and what makes them tick.
               </span>
@@ -94,7 +94,7 @@
                      class="form-textarea" required
                      data-ui-key="Explain your product idea..."
                      placeholder="What's your big idea? How does it work and what makes it special?"></textarea>
-            <span class="tooltip-icon">🚀
+            <span class="tooltip-icon">👁️
               <span class="tooltip-text">
                 This is where you shine! Explain your idea like you're telling your best friend about something amazing.
               </span>
@@ -113,7 +113,7 @@
                      class="form-textarea" required
                      data-ui-key="What problems does this solve?"
                      placeholder="What problems or frustrations does your idea fix?"></textarea>
-            <span class="tooltip-icon">🎯
+            <span class="tooltip-icon">👁️
               <span class="tooltip-text">
                 What keeps your target users up at night? What makes them go "ugh, there has to be a better way!"
               </span>
@@ -132,7 +132,7 @@
                      class="form-textarea" required
                      data-ui-key="What similar solutions exist?"
                      placeholder="What other solutions are out there and how is yours different?"></textarea>
-            <span class="tooltip-icon">🔍
+            <span class="tooltip-icon">👁️
               <span class="tooltip-text">
                 What competition exists? Don't worry - competition can be good! It means people want solutions.
               </span>
