--- a/index.html
+++ b/index.html
@@ -369,7 +369,17 @@
     }
   </style>
 
-  <!-- Scripts -->
+  <!-- Scripts: Load public environment config first -->
+  <script>
+    // Public environment configuration - loaded directly in HTML for immediate availability
+    // Only contains keys that are safe to expose in the browser
+    window.ENV = {
+      SUPABASE_URL: "https://cboescovlebokpnrsnwp.supabase.co", // Replace with your actual URL
+      SUPABASE_ANON_KEY: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNib2VzY292bGVib2twbnJzbndwIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUxMjc0ODAsImV4cCI6MjA3MDcwMzQ4MH0.2mrbRIp7A14hRs_mz37sPshZOrmt0uT9UsM0JWRSvx0", // Replace with your actual anon key
+      EUREKA: true, // Feature flag
+      EDGE_FUNCTION_URL: "https://cboescovlebokpnrsnwp.supabase.co/functions/v1", // Replace with your actual edge function URL
+    };
+
+    console.log("Public environment configuration loaded");
+  </script>
   <script type="module" src="app.js"></script>
-</body>
-</html>
